--- a/content/2010/07/03/220854.rst
+++ b/content/2010/07/03/220854.rst
@@ -1,5 +1,5 @@
-Scan Snap S500を買った
-======================
+Scan Snap S500 を買った
+=======================
 
 :authors: yosida95
 :category: Diary
@@ -30,8 +30,8 @@ Scan Snap S500を買った
 さっそくカッターを持ち出し書籍を1ページずつばらばらにしてスキャンしました。
 感想を言うとすれば一言、早いです。
 すらすら読んでくれます。
-おそらく「 Windows 7 64bit版」対応のユーティリティソフトを入れたので、そのおかげかと思われます。
-(「You Tube」にアップされている同機種のスキャン動画よりも早かったので)
+おそらく Windows 7 64bit 版対応のユーティリティソフトを入れたので、そのおかげかと思われます。
+（ You Tube にアップされている同機種のスキャン動画よりも早かったので）
 
 ただ一点、「本を解体する」という作業にはいささか抵抗を感じました。
 せっかくきれいに装丁さているのに…とか思いながら解体しました。
