--- a/content/2011/02/11/180843.rst
+++ b/content/2011/02/11/180843.rst
@@ -1,5 +1,5 @@
-mod\_rewriteでサブドメインを無制限に作る
-========================================
+mod\_rewrite でサブドメインを無制限に作る
+=========================================
 
 :authors: yosida95
 :category: Operations
@@ -61,7 +61,7 @@ Xrea の Main は blank にしたいし…。
 これならディレクトリを増やすだけで無制限 [2]_ にサブドメインをつくっていくことができます。
 Xrea のサブドメイン数制限 [1]_ なんてどこ吹く風です。
 
-ついでに、参考にしたページではうけ先のディレクトリが存在しなくても割降っていましたので想定されていないサブドメインにアクセスされると403を返すと思いますので、 ``-d`` でディレクトリが存在する場合だけ表示させ、そうでない場合 (例えば ``http://hogehoge.ysd95.be`` ) は ``http://yosida95.com/works.py?hogehoge.ysd95.be`` に302 [3]_ で転送するようにしてあります。
+ついでに、参考にしたページではうけ先のディレクトリが存在しなくても割降っていましたので想定されていないサブドメインにアクセスされると403を返すと思いますので、 ``-d`` でディレクトリが存在する場合だけ表示させ、そうでない場合（例えば ``http://hogehoge.ysd95.be`` ）は ``http://yosida95.com/works.py?hogehoge.ysd95.be`` に302 [3]_ で転送するようにしてあります。
 こうすることで ``yosida95.com/works.py`` のログの解析でどのサブドメインに来られたのかトラッキングすることが可能であります。
 
 .. [1] 先ほど Xrea サーバーの仕様みてたら、足りない場合は相談に応じます、的なことが書いてありました。
