--- a/content/2011/02/20/232901.rst
+++ b/content/2011/02/20/232901.rst
@@ -1,5 +1,5 @@
-ホスト名やIPアドレスによってユーザーの行動を制限する
-====================================================
+ホスト名や IP アドレスによってユーザーの行動を制限する
+======================================================
 
 :authors: yosida95
 :category: Code
@@ -116,6 +116,6 @@ pattern には弾くユーザーのホスト名ないし IP アドレスを、 t
 
 とでもすればいいんじゃないでしょうか。
 また、ノードを生成生成する部分と、探索する部分を分けてクラスにするというてもありますが、個人的にそれにはあまり魅力は感じません。
-(複数プログラムで同じようにアクセス禁止を使うためにライブラリ化するのであれあクラスでもいいのかな？)また、 MySQL サーバーのレスポンスが悪かったりでアクセス毎にノードを生成するのは気が引ける、という方はノードを生成する部分の処理を分離して、 DB にデータを詰めたときに一度生成して var\_export とかでファイルにキャッシュすればよろしいかと。
+（複数プログラムで同じようにアクセス禁止を使うためにライブラリ化するのであれあクラスでもいいのかな？）また、 MySQL サーバーのレスポンスが悪かったりでアクセス毎にノードを生成するのは気が引ける、という方はノードを生成する部分の処理を分離して、 DB にデータを詰めたときに一度生成して var\_export とかでファイルにキャッシュすればよろしいかと。
 
 【おまけ】もともと正規表現でこれを実現しようかな、とも思ったのですが、すべてのレコードを\|でつなぐのはあまりにもお粗末に感じたので、効率的な探索のために TLD でまとめたり IP アドレスのブロックでまとめたりした表現を自動生成しようかなと考えたのですが、それだったら木構造を使ったほうが美しいかなと感じこのような処理にした次第であります。
