--- a/content/2011/03/13/062225.rst
+++ b/content/2011/03/13/062225.rst
@@ -16,13 +16,13 @@ Twitter でも何度か言いましたが、今回の地震で私は帰宅難民
 スキーの全行程を終え大型バスで学校に向かっている中、地震にあいました。
 震度5強でした。
 
-幸い高速道路入り口で別件(と思われます)で停車している中ででした。
+幸い高速道路入り口で別件（と思われます）で停車している中ででした。
 バスが大きく揺れ何事かと思い表を見ればすごい勢いで電線や電柱その他が揺れたりたわんだりしていました。
 揺れが収まると先生方・バスの運転手さんがバスを降りて集まり情報収集その他に当たっていました。
 首都高が地震通行止めとの情報が入りましたが子細がよくわからなく、止められるかもしれないがそれでも行けるところまで、ということで首都高に乗りました。
-そしてしばらく走行していると案の定パトカーの先導(伝聞)で談合坂SAへ。
+そしてしばらく走行していると案の定パトカーの先導（伝聞）で談合坂 SA へ。
 
-談合坂SAについた我々は無期限待機。
+談合坂 SA についた我々は無期限待機。
 先生方・バスの運転手が情報収集に当たるも一向に先が見えない。
 また大地震であるとのことで保護者への連絡回しをする、などでてんてこ舞い。
 
@@ -38,7 +38,7 @@ Twitter でも何度か言いましたが、今回の地震で私は帰宅難民
 音声も入ってくることでさらに緊迫した空気でバス内は満たされていきました。
 
 時間をみれば20時を回り私が当初予想していた通り、日付が変わる前の帰宅は絶望的な状況に。
-バスで一夜を明かすことが決定し、副校長先生の尽力によりSA内のお店のほうとうが、さらに先生方が駆けまわり用意された500mlの飲料と1人1つのパンが配られました。
+バスで一夜を明かすことが決定し、副校長先生の尽力により SA 内のお店のほうとうが、さらに先生方が駆けまわり用意された 500ml の飲料と1人1つのパンが配られました。
 
 21:10に3台のバスを2:1に男女で分け、21:30消灯。
 しかし、みな寝れない夜を送っているようでした。
@@ -61,13 +61,13 @@ Twitter でも何度か言いましたが、今回の地震で私は帰宅難民
 我が家につき、明かりが漏れていたのでインターホンを押すと父がドアを開けました。
 私は2階の自室に急ぎ、状況を確認すると本棚の上に置かれていた重量のある百科事典や、ポケットファイル、野球チームのヘルメットはすべて床に落ちていました。
 また棚の上に置かれていたプリンターなどはずれ、棚の中はぐちゃぐちゃ。
-40kgある電子ピアノや60kgを超えるであろう荷物を積んだ棚は15cmほど移動していました。
-また停電の跡もあり、PCの電源が落ちていました。
+40kg ある電子ピアノや 60kg を超えるであろう荷物を積んだ棚は 15cm ほど移動していました。
+また停電の跡もあり、 PC の電源が落ちていました。
 
 聞けばリビングの写真立ては落ちてガラスが割れ、ブラウン管テレビは滑り落ちそうになっていたそうです。
 
 今回は非常に恐ろしい経験をしました。
-日本における観測史上最大の地震、そして10mを超える津波…。
+日本における観測史上最大の地震、そして 10m を超える津波…。
 本当に、悪い夢を見ているかのような、あるいはドラマの一場面であるかのような印象です。
 
 このような大惨事が現実に起きてしまった以上仕方ありません。
