--- a/content/2011/03/31/000100.rst
+++ b/content/2011/03/31/000100.rst
@@ -20,7 +20,7 @@
 当然、というかなんというか俺はぼっち飯でしたら、クラスの女の子に声を掛けられ、一緒にいた隣のクラスの女の子を紹介されました。
 この隣のクラスの子が、1年生の前期、学年で一番よく話した人でした。
 
-入学してすぐの委員決め、なかなか決まらなかった中ですでに決まっていた女の子(前出の隣のクラスの子を紹介してくれた子)に、同じ委員に誘われ、生活委員をやったことが記憶に残っています。
+入学してすぐの委員決め、なかなか決まらなかった中ですでに決まっていた女の子（前出の隣のクラスの子を紹介してくれた子）に、同じ委員に誘われ、生活委員をやったことが記憶に残っています。
 生活委員の会合では他のクラスの人も集まってくるため、自然と他のクラスとのつながりも細くはありましたが生まれてきました。
 ちなみに、この生活委員のメンバーの中に前出のとなりのクラスの子もいました。
 
@@ -36,8 +36,9 @@
 前述のとおり生活委員をやっていた俺は運動会の用具係をしました。
 偶然にも同じ担当に前出の隣のクラスの女の子がいました。
 ちなみに、この頃から俺は彼女を意識するようになっていた、という話もあります。
-しかし、引っ込み思案で奥出な俺(当時は輪をかけてひどかった)はとうとう言い出せることはありませんでした。
-俺がときどき入学からやり直したいと口にすることがあるのですが、それはこの時をやり直したい、という意味で言っていることがほとんどですwうーん、チャンスはあったと思うのですがね、、、とうぬぼれていますw
+しかし、引っ込み思案で奥出な俺（当時は輪をかけてひどかった）はとうとう言い出せることはありませんでした。
+俺がときどき入学からやり直したいと口にすることがあるのですが、それはこの時をやり直したい、という意味で言っていることがほとんどですw
+うーん、チャンスはあったと思うのですがね、、、とうぬぼれていますw
 
 1年生の後期は学級委員をやりました。
 立候補者が俺を入れて2人で、投票の結果俺が当選しました。
@@ -78,13 +79,15 @@
 また、彼と仲よかった人ともどんどん仲良くなっていきました。
 彼はテニス部でしたので、テニス部連中に特に友人が多くなりました。
 また時たまテニス部の練習に顔を出すこともありました。
-そうそう、テニス部顧問の先生に、「あれ吉田ってテニス部じゃなかったっけ？」と言われることもありました(これは3年生の出来事)。
+そうそう、テニス部顧問の先生に、「あれ吉田ってテニス部じゃなかったっけ？」と言われることもありました（これは3年生の出来事）。
 
 2年生後期になり俺はなんと、生徒会役員に立候補することにしました。
-しかもノリでw選択理科の授業中だったのですが、友人がすでに出る、と決めていた子の応援弁士をすると聞いたので、「じゃあ俺も生徒会役員選挙、出てしまおう」という感じで。
+しかもノリでw
+選択理科の授業中だったのですが、友人がすでに出る、と決めていた子の応援弁士をすると聞いたので、「じゃあ俺も生徒会役員選挙、出てしまおう」という感じで。
 その場で応援弁士探しをしました。
 まず手始めにクラスの学級委員に頼みましたら断られてしまいました。
-そこでテニス部部長に打診したところ、立会演説会での原稿を書いてくれるのら、ということでしたので俺がいかに生徒会役員に適格か、という文を自分で書きましたw「僕は自信を持って彼を生徒会役員に推薦します。」と。
+そこでテニス部部長に打診したところ、立会演説会での原稿を書いてくれるのら、ということでしたので俺がいかに生徒会役員に適格か、という文を自分で書きましたw
+「僕は自信を持って彼を生徒会役員に推薦します。」と。
 結果は、、、ご存知の通り見事当選。
 役職は役員の互選で決めるのですが、僕は1票の差で会長職を逃し、副会長に収まりました。
 きっかけはノリだったものの、生徒会役員をやった事は間違いなく俺にとってとてもいいことでした。
@@ -110,7 +113,7 @@
 
 3年生まずやったのが修学旅行でした。
 新潟に行って、田植え体験や農家泊をしました。
-農家泊メンバーが前出の中1番の友人(テニス部副部長)とテニス部部長。
+農家泊メンバーが前出の中1番の友人（テニス部副部長）とテニス部部長。
 この修学旅行は俺にとってとてもいい経験でした。
 
 - `修学旅行`_
@@ -132,10 +135,10 @@
 やっぱり合唱コンクールではピアノ伴奏をしました。
 指揮者が決まらない中で、某お笑い芸人よろしく進むことを望んで「じゃぁ、俺がやるよ」と手をあげたらそのまま「どうぞ、どうぞ」と俺に。
 ということで指揮者もつとめました。
-なんと修学旅行で農家泊班が俺と同じだった2人も指揮者をやるらしく(まぁ、俺が誘い込んだんだがw)、頼まれましたので家に呼んでピアノで伴奏をしつつ、他の付いてきた奴らに歌わせつつ、曲のイメージとかポイントとかを指導しました。
+なんと修学旅行で農家泊班が俺と同じだった2人も指揮者をやるらしく（まぁ、俺が誘い込んだんだがw）、頼まれましたので家に呼んでピアノで伴奏をしつつ、他の付いてきた奴らに歌わせつつ、曲のイメージとかポイントとかを指導しました。
 まぁ、俺の主観のイメージをなるべく入れずに、楽譜に忠実にではありましたが。
-また、自分らのクラスで練習するから、と俺のピアノ伴奏を録音してCDに焼くこともしましたねぇ。
-なんだかんだで行事ごと自分のクラスより他のクラスの力になってしまっているという(笑)まぁ、我がクラスは金賞をとりましたし、俺個人は伴奏者賞をとりましたし結果オーライです。
+また、自分らのクラスで練習するから、と俺のピアノ伴奏を録音して CD に焼くこともしましたねぇ。
+なんだかんだで行事ごと自分のクラスより他のクラスの力になってしまっているという（笑）まぁ、我がクラスは金賞をとりましたし、俺個人は伴奏者賞をとりましたし結果オーライです。
 
 - `合唱コンクール`_
 
@@ -146,7 +149,8 @@
 パワポでスライド作って発表を。
 みんなが真剣に真面目に事実の羅列と感想の発表をしている中で、俺は1人浮いてウケ狙い路線で行きまして、、、結果は大当たりしました。
 えぇ。
-ただ、次に発表を控えていた女の子に、あんな発表をされるとハードルががが、と怒られましたw発表が終わると2年生が帰され、修学旅行、新潟でお世話になった方々の前で文化祭で踊ったソーラン節を披露しました。
+ただ、次に発表を控えていた女の子に、あんな発表をされるとハードルががが、と怒られましたw
+発表が終わると2年生が帰され、修学旅行、新潟でお世話になった方々の前で文化祭で踊ったソーラン節を披露しました。
 その後に久々に新潟の方々とお話しする機会に恵まれました。
 
 文化祭が終了すると、もうみんな受験モードなんですね。
@@ -172,7 +176,8 @@
 
 そんなこんなで学年1番に進学先高校を決めてしまいました。
 滑り止めに都立小松川高校を考えていたのですが、受かってしまったので取り消し。
-俺のせいで受かったはずの誰か1人が落ちるのは嫌ですのでw(こういう発言がみんなから反感を買うのですね)後はしっかり学校に通って卒業式を待つのみ、となりました。
+俺のせいで受かったはずの誰か1人が落ちるのは嫌ですのでw
+（こういう発言がみんなから反感を買うのですね）後はしっかり学校に通って卒業式を待つのみ、となりました。
 なったはずだったのですが、受験対策が主な授業内容に意味を感じ無くなってしまい、そこに「人間は誰しも明日が約束されていないから、一日一日を満足して過ごさねばいけない。」という俺のポリシーが浮いてきて、ええ。
 最後の最後になにしてくれてんねん状態です。
 結局母と相談の上、都立高校出願で15分間登校の2/7は学校へ行き、8, 9, 10を欠席し、建国記念日の11、土曜の12と日曜の13をあわせてなんちゃって6連休を頂きました。
@@ -185,8 +190,9 @@
 夜を徹した10時間の作業でなんとか完成させられました。
 しっかし、あれですね。
 みんなが1度は映るように、とかの配慮が大変ですね。
-そもそもこの日にMBAが上海から届き、そして雪が降ったので雪だるまを作り( `雪やこんこ♪`_ )、それでもって郵便局で定形外郵便やレターパックの発送をしたり、、、忙しさが忙しさを呼ぶんですねぇ。
-やることの順番間違っている気がしねーでもないですがwそんなわけで完成。
+そもそもこの日に MBA が上海から届き、そして雪が降ったので雪だるまを作り（ `雪やこんこ♪`_ ）、それでもって郵便局で定形外郵便やレターパックの発送をしたり、、、忙しさが忙しさを呼ぶんですねぇ。
+やることの順番間違っている気がしねーでもないですがw
+そんなわけで完成。
 上映されました。
 俺の前に、学年で結成したバンドの演奏をやっていて、盛り上がってて、その後。
 最初は明るくて、オチもあるような楽しい感じで、終わりに近づくに連れて寂しい雰囲気に。
@@ -202,14 +208,14 @@
 声を大にして言います。
 \ **違います!!**
 
-卒業式前日にもう一つ話があって、それは友人(テニス部副部長で俺の1番の友人であった彼)と友人の彼女(前出ではありますが伏せます)が家に遊びに来て。
+卒業式前日にもう一つ話があって、それは友人（テニス部副部長で俺の1番の友人であった彼）と友人の彼女（前出ではありますが伏せます）が家に遊びに来て。
 その時にその彼女がもう一人女の子を連れてきてたんですね。
 彼女は今までまともに俺と話したことすらないよいような人で。
 でも、これをきっかけに仲良くなったんです。
 まるで、前からずっと仲良かったかのように。
 それがとても勿体無いような気がして。
 明日でもう学校に来ることはないのに。
-(ここまで俺の一方的な感情)。
+（ここまで俺の一方的な感情）。
 俺の友人はとてもシャイで、だから俺の家から帰るときに2人で帰ればいいものを俺らが付き添って行ったんですね。
 俺が横からずっと2人で帰れ、今だ切り出せ、と言っていたのですが。
 結局彼の彼女の家が近くなった頃にようやく言い出せて。
@@ -219,7 +225,8 @@
 あれですよ、俺女の子と遊んで初めて家に帰ってから楽しかったよ、メールを送りました。
 
 そして卒業式を迎えたわけです。
-あれ？卒業式エントリ書いてなかったw後で書きますね。
+あれ？卒業式エントリ書いてなかったw
+後で書きますね。
 日付は卒業式の日のものにさせていただきます。
 俺は中学3年間、とても充実していて、なんか寂しくなるとかありませんでした。
 とても晴れ晴れとした、清々しい気持ちで卒業しました。
@@ -230,9 +237,11 @@
 この卒業式のあと、また昨日のメンバーであそびました。
 俺の友人の方は卒業式を終えてすぐさま昼も取らず我が家にきました。
 そして、彼の予定ではそのまま彼女たちも誘って一緒にお昼食べたり、、、だったのですが予定が合わず。
-見切り発車しすぎですよねw仕方ないので共通の男友達の家に行き、もともとその彼と遊ぶ予定だったやはり共通の男友達の家に迎えに行って、で最初訪ねた友人の家に上がらせてもらいましたが特段やることもなく。
+見切り発車しすぎですよねw
+仕方ないので共通の男友達の家に行き、もともとその彼と遊ぶ予定だったやはり共通の男友達の家に迎えに行って、で最初訪ねた友人の家に上がらせてもらいましたが特段やることもなく。
 そこで我が家に移動しました。
-俺ら2人は昼を取っていなかったので途中でコンビニに寄って寂しく昼飯をwその後家に呼んだ2人が自分らのクラスの打ち上げ会に行くとのことでしたので俺らは寂しい2人に戻ってしまい、、、夜もコンビニ飯で済ませたところようやく都合がついて昨日のメンバーで集合。
+俺ら2人は昼を取っていなかったので途中でコンビニに寄って寂しく昼飯をw
+その後家に呼んだ2人が自分らのクラスの打ち上げ会に行くとのことでしたので俺らは寂しい2人に戻ってしまい、、、夜もコンビニ飯で済ませたところようやく都合がついて昨日のメンバーで集合。
 午後8時のことでした。
 そこから4人で公園へ行って9時まで遊んでいました。
 
