--- a/content/2011/04/24/154929.rst
+++ b/content/2011/04/24/154929.rst
@@ -6,10 +6,10 @@
 :tags: Python
 
 こんにちは。
-今日は9 \* 9の数独 (ナンバープレイス) を Python に解かせてみました。
+今日は 9 \* 9 の数独（ナンバープレイス）を Python に解かせてみました。
 
 実は以前にも数独解くプログラムを作っていて、ごく簡単な問題は解けたのですが難しい問題は溶けていませんでした。
-ところが先日蟻本を読んでいたら、「あれ？深さ優先探索でいけんじゃね？」と思い立ち (というか蟻本の探索の項に数独に使える的な記述があるw) 、書いてみました。
+ところが先日蟻本を読んでいたら、「あれ？深さ優先探索でいけんじゃね？」と思い立ち（というか蟻本の探索の項に数独に使える的な記述があるw）、書いてみました。
 
 ソースコード
 ------------
@@ -100,11 +100,11 @@
 
 これを実行すると問題を訊かれるので指示通りに問題を入力すると解いてくれます。
 
-解が2つ以上あったり、理論だけでなく勘に頼るような問題 (本来それは数独の問題として成立していない) でも、すべての組み合わせを試しますので、解けると思います。
+解が2つ以上あったり、理論だけでなく勘に頼るような問題（本来それは数独の問題として成立していない）でも、すべての組み合わせを試しますので、解けると思います。
 ただし、解が2つ以上の問題はそのうち最初に見つかった解1つの出力です。
 
 試しに以前 `GIGAZINE で紹介されていた世界一難しい数独 <http://gigazine.net/news/20100822_hardest_sudoku/>`__\ を解かせたときのスクリーンショットがこちら。
-(コンピューターに解かせた結果も写っていますのでご注意ください)
+（コンピューターに解かせた結果も写っていますのでご注意ください）
 
 |answer|
 
