--- a/content/2011/05/16/235339.rst
+++ b/content/2011/05/16/235339.rst
@@ -19,8 +19,8 @@ Twitter で `@Sn0wNight <http://twitter.com/Sn0wNight>`__ さんが
 プログラミング開始前
 --------------------
 
-僕は保育園児の時に Windows 98 SE のノートPCを母からおもちゃとして渡された。
-これがはじめて触った PC。
+僕は保育園児の時に Windows 98 SE のノート PC を母からおもちゃとして渡された。
+これがはじめて触った PC 。
 ここから1ヶ月足らずでローマ字覚えたらしい。
 
 きっかけ
@@ -76,7 +76,7 @@ PHP
 Perl 諦めてからプログラム書く事自体にブランクができる。
 そして、次にこっちに戻ってきたのが中1。
 理由が金儲け。
-ドロップシッピングとかいう仕組み(?)でオンラインショップを立ち上げたかった。
+ドロップシッピングとかいう仕組み（?）でオンラインショップを立ち上げたかった。
 最初は全てのページを1つずつ HTML で作っていったけど面倒だしやめた。
 そこで自作 CMS つくろうと一念発起。
 そのために Perl やり直して CGI 書くしかないのか、と思いつつも気が進まず、いろいろ調べてたら PHP に出会った。
@@ -129,7 +129,7 @@ Java
 
 C をしこしこやりながらプログラミングにのめりこんでいく俺。
 図書館でプログラミング関連書籍コーナーにいたら Java の本見かけたから手にとってみた。
-まだ Web への興味が強かった俺は、 HTMLに Java アプレット埋め込んでゲーム提供できたら素敵だな、と思ってちょこっと Java をかじる。
+まだ Web への興味が強かった俺は、 HTML に Java アプレット埋め込んでゲーム提供できたら素敵だな、と思ってちょこっと Java をかじる。
 でも、すぐに挫折。
 図書館の２週間の返却期限ってのも理由ではなかろうかと思う。
 まぁ、初めてオブジェクト指向っつーのに真面目に向き合ったのがこの頃だから、完全に無駄ってわけでもなかった。
@@ -141,9 +141,9 @@ Python
 ------
 
 C をしばらく頑張っていた俺だけど、 Python をやりたいな、ってことを強く思う。
-理由はあまり覚えてないけど、 `@isidai <http://twitter.com/isidai>`__ さんの「\ `「ブラッディ・マンデイ」を考察する <http://japan.cnet.com/blog/isidai/2008/10/12/entry_27017004/>`__\ 」って記事に加え、「\ `ハッカーになろう (How To Become A hacker <http://cruel.org/freeware/hacker.html>`__ 」ってウェブページの中で Python を知っていたこと、 GUI つくるのに Python だと Tkinter で簡単にできるよ、ってことや Python の文法は美しいよ、さらに Python は覚え易いのに柔軟に何でもできる最強言語だ、ということををきいたってあたりだと思う。
+理由はあまり覚えてないけど、 `@isidai <http://twitter.com/isidai>`__ さんの「\ `「ブラッディ・マンデイ」を考察する <http://japan.cnet.com/blog/isidai/2008/10/12/entry_27017004/>`__\ 」って記事に加え、「\ `ハッカーになろう (How To Become A hacker) <http://cruel.org/freeware/hacker.html>`__ 」ってウェブページの中で Python を知っていたこと、 GUI つくるのに Python だと Tkinter で簡単にできるよ、ってことや Python の文法は美しいよ、さらに Python は覚え易いのに柔軟に何でもできる最強言語だ、ということををきいたってあたりだと思う。
 また、日本では Python 人口が少なく、少数派な俺かっけぇ、とかいうくだらない理由も有ることだろう。
-で、 Python 始めたのが去年 (2010年) の３月くらい。
+で、 Python 始めたのが去年（2010年）の３月くらい。
 だから、もう丸１年以上が経過している。
 
 そんな感じで Python を始めた俺だけど、これは大正解だったと思ってる。
@@ -158,7 +158,7 @@ Python は応用範囲が広くて素敵。
 というか、 Web サイトの運営でやりたいことを実現するためにプログラムの学習を進めてきたから、 Web に傾倒するのはもはや必然。
 
 今は個人的にアルゴリズムの勉強も始めたりで、 CUI で動くプログラム書くことも増えた。
-また、技術系の高校に進んだから、情報の技術とかで学校の授業として C言語 を扱うようになることと予想される。
+また、技術系の高校に進んだから、情報の技術とかで学校の授業として C 言語 を扱うようになることと予想される。
 推薦で入った俺は情報分野に進むことが確定しているから、3年とかでは学校の授業で自作スクリプト言語を作ることも有るらしい。
 
 今まで一人でプログラムを書いてきた俺。
