--- a/content/2012/04/08/120455.rst
+++ b/content/2012/04/08/120455.rst
@@ -1,5 +1,5 @@
-プログラミング生放送勉強会14@品川でLTをしてきました #pronama
-============================================================
+プログラミング生放送勉強会14@品川で LT をしてきました #pronama
+==============================================================
 
 :authors: yosida95
 :category: Meetup
@@ -12,7 +12,7 @@
 タイトルは「 Python meets MongoDB 」です。
 仰々しいタイトルですが、内容は先日公開したサービス `#TwitActivity <http://twit.yosida95.com/>`__ のステマです。
 
-スライドはSperker Deckに公開してあります。
+スライドは Sperker Deck に公開してあります。
 
 .. raw:: html
 
