--- a/content/2012/06/18/033304.rst
+++ b/content/2012/06/18/033304.rst
@@ -8,7 +8,7 @@
 ちょっと必要になったから、ウェブページのアドレスを渡すとそのページ中にある画像をダウンロードしてくれるスクリプトを作った。
 やっつけ仕事。
 
-基本的に img タグを追ってるけど、 img タグが a タグの中にいて、かつその a タグの href 属性に指定されてる URL が画像の場合はそっちをダウンロードしてきてくれる (img タグにサムネイルを指定してクリックすると大きくなるページを想定)。
+基本的に img タグを追ってるけど、 img タグが a タグの中にいて、かつその a タグの href 属性に指定されてる URL が画像の場合はそっちをダウンロードしてきてくれる（ img タグにサムネイルを指定してクリックすると大きくなるページを想定）。
 
 使ってるマシンの CPU コア数分だけプロセス作って、そいつらで並列に画像をダウンロードするからそれなりに速いと思う。
 コアあたりスレッド2つで動くなら、 CPU の数 * 2でやるともっと速いかもね。
