--- a/content/2013/12/22/000222.rst
+++ b/content/2013/12/22/000222.rst
@@ -35,7 +35,7 @@
 進学先については、今まで独学でしかなかったプログラミングについて、体系的に学ぶことでその技能を向上させるべく、情報系の高校に進学したいと思っていました。
 
 しかし、特定の高校に進学したいと考えていたわけではなく、都内にある情報系の高校でそこそこ偏差値が高い高校であればどこでも良いだろうと考えていました。
-この候補に上がった高校が東京工業大学附属科学技術高校と、高校ではありませんが東京工業高等専門学校(東京高専)でした。
+この候補に上がった高校が東京工業大学附属科学技術高校と、高校ではありませんが東京工業高等専門学校（東京高専）でした。
 この2つしかなかった選択肢の中から、私は東京工業大学属科学技術高校を選択しました。
 この選択が中学3年生の10月頃の話だったと思います。
 入試には学校推薦入試と一般入試があり、模擬試験で偏差値が72あった私は一般受験でも十分合格できると思いましたが、より実施が早く、従ってより早く進路が確定する学校推薦入試によって合格を果たしました。
@@ -49,7 +49,7 @@
 まず、東京工業大学附属科学技術高校には、私が所属している情報・コンピュータサイエンス分野の他に、応用化学分野や建築・デザイン分野など合わせて5つの分野があります。
 1年生の時には学年の生徒全員が同じカリキュラムで学習をします。
 このカリキュラムの中に「科学技術入門」という教科があり、この教科のなかでこれら5つすべての分野について導入学習を行います。
-その後、2年生への進級に際して5つの分野の中からいずれか1つを選択し、2年生・3年生では選択した分野毎のカリキュラムに従って学習を進めていきます(ただし、学校推薦入試で入学した生徒は入学の時点で進む分野が決定しています。)。
+その後、2年生への進級に際して5つの分野の中からいずれか1つを選択し、2年生・3年生では選択した分野毎のカリキュラムに従って学習を進めていきます（ただし、学校推薦入試で入学した生徒は入学の時点で進む分野が決定しています。）。
 
 さて、無事入学を果たした私でしたが、入学3日目くらいにまず些細な違和感を感じました。
 それは、「私のクラスに私と匂いがする人間がいない」というものです。
@@ -80,7 +80,7 @@
 親を説得することに成功した私は、親を通じて退学の意思を学級担任へ伝えました。
 すぐさま面談の場が持たれ、冒頭に書いた4者での面談が行われました。
 面談の中では退学を決意した経緯や将来設計のことなどについて聞かれたと記憶しています。
-学級担任(数学科)は「私には専門的なことや IT 業界のことは分からないので……」と終始聞く側に回っていました。
+学級担任（数学科）は「私には専門的なことや IT 業界のことは分からないので……」と終始聞く側に回っていました。
 そんな感じで進行した面談でしたが、社会の厳しさを説かれたり、私とほぼ同様の理由で退学を考えたものの結局大学へ進学した卒業生を紹介されたりしている内に、話の流れと私の決意を有耶無耶にされ、とりあえず再度熟考するという形で退学は保留となりました。
 
 このような経緯で退学の機を逃した私でしたが、学校に行くモチベーションは完全に失われ、ただ惰性で学校に通うようになりました。
@@ -172,7 +172,7 @@
    -  勉強会での発表は良い経験になります
 
       -  あと1年早ければ `CombConf <http://combconf.com/>`_ というものがありました
-      -  `CombConf というITカンファレンスを開催してきました #combconf <{filename}/2012/12/25/064109.rst>`_
+      -  `CombConf という IT カンファレンスを開催してきました #combconf <{filename}/2012/12/25/064109.rst>`_
       -  第2回はありません
 
    -  技術系のバイトはよい経験になります
@@ -192,7 +192,7 @@
 最後に
 ------
 
-こういうエントリを書くと、専門ではない授業の重要性を説かれることになります（例: `No Title (近況報告) <{filename}/2012/05/15/082821.rst>`_\ のコメント）。
+こういうエントリを書くと、専門ではない授業の重要性を説かれることになります（例: `No Title （近況報告） <{filename}/2012/05/15/082821.rst>`_\ のコメント）。
 
 私は、生涯学習の重要性や素晴らしさについては認識しているつもりですが、すでに自らの選択するべき職業について明確に自覚していて、手に職をつけるべきタイプの人間が義務教育を修了した後に専門的では無い事を意識的に、あるいは体系立てて学ぶ必要性やその重要性についてはいまいちピンときていません。
 学びたいことや学ぶべきことについて、それを学ぶ必要が生じた時に生涯学習の一環として学べばよいと考えていることがその理由です。
@@ -201,14 +201,14 @@
 それらの余裕を手に入れるには、一般にドカタのようなポジションではなく、専門的な技能を持った専門職である必要があり、またある程度の社会的地位が要るはずです。
 つまり、社会人デビューする時にはすでに専門技能を有している必要があると考えます。
 
-これまでに3つの会社で(アルバイトではありますが)エンジニアとして勤務してきた経験や、属するコミュニティで聞いてきた話、目の当たりにした出来事などによれば、技能を磨いていけばある程度の会社で専門職として勤務するところまでは到達できます。
+これまでに3つの会社で（アルバイトではありますが）エンジニアとして勤務してきた経験や、属するコミュニティで聞いてきた話、目の当たりにした出来事などによれば、技能を磨いていけばある程度の会社で専門職として勤務するところまでは到達できます。
 従って、学生や生徒である期間に専門的では無い事を学ぶために自らの専門性を高めることを制限することは却ってよくないのでは無いでしょうか。
 
 余談
 ----
 
-はてなブログのエントリエディタにある文字数カウンタによれば、このエントリは6,271文字によって構成されているそうです。
-400時詰め原稿用紙にして16枚分。
+はてなブログのエントリエディタにある文字数カウンタによれば、このエントリは 6,271 文字によって構成されているそうです。
+400字詰め原稿用紙にして16枚分。
 久しぶりにこれほどの長文を書きましたが、こんな長文を書いている時間があるのなら卒業に必要なレポートを書けよという話です。
 
 追記
@@ -232,7 +232,7 @@
 
 私の詳細な職歴については、以下のエントリもご覧ください。
 
--  `株式会社Decoo に就職して、そして退職しました <{filename}/2012/09/03/211203.rst>`_
+-  `株式会社 Decoo に就職して、そして退職しました <{filename}/2012/09/03/211203.rst>`_
 -  `株式会社ゼロスタートに入社しました！ <{filename}/2012/10/13/222109.rst>`_
 -  `退職のご報告 <{filename}/2013/07/31/223353.rst>`_
 -  `ゲヒルン株式会社に入社しました <{filename}/2013/08/01/222538.rst>`_
@@ -244,7 +244,7 @@
 
 -  `情報科の授業は教養に過ぎないという話 - 木更津工業高等専門学校編 <http://yukkurisinai.hatenablog.com/entry/2013/12/22/164847>`_
 
-本エントリのタイトルからもお察しかと思いますが、それぞれ色々な学校に所属する(していた)諸氏の\ **体験談**\ を知りたくて、まずは自分の体験談を語る本エントリを執筆しました。
+本エントリのタイトルからもお察しかと思いますが、それぞれ色々な学校に所属する（していた）諸氏の\ **体験談**\ を知りたくて、まずは自分の体験談を語る本エントリを執筆しました。
 そのため、思惑通り木更津高専での体験談を読むことができて幸いです。
 他にも、体験談をお持ちの方はブログエントリとして共有していただければと存じます。
 
