--- a/content/2014/12/29/130000.rst
+++ b/content/2014/12/29/130000.rst
@@ -88,7 +88,7 @@ OSS にしたプロダクト
 -  `yosida95/python-sshkey <https://github.com/yosida95/python-sshkey>`__
 
    -  OpenSSH 形式の鍵ペアをパースする Python 3 ライブラリ
-   -  これも欲しいところだけしか書いていないので RSA, DSA, ECDSAの各公開鍵をデコードして finger print と鍵長を計算するか、各アルゴリズムの公開鍵から OpenSSH 形式にエンコードするくらいしかできません
+   -  これも欲しいところだけしか書いていないので RSA, DSA, ECDSA の各公開鍵をデコードして finger print と鍵長を計算するか、各アルゴリズムの公開鍵から OpenSSH 形式にエンコードするくらいしかできません
 
 -  `GehirnInc/GOpenID <https://github.com/GehirnInc/GOpenID>`__
 
@@ -159,7 +159,7 @@ OSS にしたプロダクト
 おわりに
 --------
 
-2014 年中は人にも仕事にも恵まれ、高校を (無事ではないながらも) 卒業し、ゲヒルンでの正職員登用、引っ越しなどのイベントがあり、大変よい方向へと向かった1年でした。
+2014 年中は人にも仕事にも恵まれ、高校を（無事ではないながらも）卒業し、ゲヒルンでの正職員登用、引っ越しなどのイベントがあり、大変よい方向へと向かった1年でした。
 お世話になった方々には厚くお礼申し上げます。
 
 2015 年にはようやく 20 歳になります。
@@ -170,7 +170,7 @@ OSS にしたプロダクト
 
 .. _anchor:
 
-| # ぼくがゲヒルンに入社して以来戦い続けてきたプロジェクトは (twitter や facebook で何度か愚痴ったり皮肉ったりしたように) 紆余曲折がありましたが、経営陣に呼ばれて実施された個人面談で思っていることをはっきり言わせてもらったことや、それによってチームの編成が変わっりしたことも追い風となってようやく勝つことができそうです。
+| # ぼくがゲヒルンに入社して以来戦い続けてきたプロジェクトは（ Twitter や facebook で何度か愚痴ったり皮肉ったりしたように）紆余曲折がありましたが、経営陣に呼ばれて実施された個人面談で思っていることをはっきり言わせてもらったことや、それによってチームの編成が変わっりしたことも追い風となってようやく勝つことができそうです。
 | # ぼくの一連の投稿を受けてかなり本気の心配を頂いたり、強い共感をを頂いたりしていたので、状況が好転したことをひとまずここでご報告させていただきます。
 
 余談ですが、昔アイデンティティについて思案して Write Only な Twitter Client を作ったり、だれでも匿名でぼくのアカウントから発言できるようにしていた頃に Twilog を消してしまったのですが、\ `ツイセーブというサービス <http://twisave.com/yosida95/search/%E5%8A%A9%E3%81%A3%E4%BA%BA+OR+%E9%9F%B3%E4%BF%A1%E4%B8%8D%E9%80%9A+OR+%E3%82%B3%E3%83%B3%E3%83%88%E3%83%AA%E3%83%93%E3%83%A5%E3%83%BC%E3%83%88+-Qiita+OR+%E3%83%95%E3%83%AD%E3%83%B3%E3%83%88+OR+%E7%A4%BE%E5%86%85%E3%83%8B%E3%83%BC%E3%83%88+OR+%E7%A4%BE%E4%BC%9A%E7%9A%84>`__ の存在を知り登録したところ、 tweets.zip から過去の発言を登録できて最高に便利でした。
