--- a/content/2015/01/13/113000.rst
+++ b/content/2015/01/13/113000.rst
@@ -15,7 +15,7 @@
 ぼくが所属するゲヒルンでは CircleCI を使って CI を回しています。
 以前はぼくが社内にたてた Jenkins を使っていて、ときどき Jenkins にバグ報告を上げたりもしていたのですが、ライブラリをオープンソースにする過程で TravisCI を使いこむようになって Jenkins のバグと運用から開放される喜びを知り、その後クローズドソースなプロダクトでも SaaS の CI を利用したく複数のサービスを検討した結果 CircleCI を契約しました。
 最初のころは個人でのみ CircleCI を利用していたのですが、個人の契約に任意の Organization を Piggyback させられることを知り `GehirnInc <https://github.com/GehirnInc>`__ アカウントでも CircleCI を利用できるようにしました。
-そして現在は社内で開発している多くのプロダクトで CircleCI が利用されるようになりました (というか、ぼくが参加するプロジェクトでは、ぼくが開発をしないリポジトリに対しても CircleCI を使うための Pull Request を投げています)。
+そして現在は社内で開発している多くのプロダクトで CircleCI が利用されるようになりました（というか、ぼくが参加するプロジェクトでは、ぼくが開発をしないリポジトリに対しても CircleCI を使うための Pull Request を投げています）。
 
 
 CI と自動デプロイ
@@ -30,7 +30,7 @@ Git-flow や GitHub-flow による開発をしている場合、 topic ブラン
 CI でアプリケーションをデプロイすることそのものは簡単なことです。
 それこそ適当にシェルスクリプトを書いて、 rsync でアプリケーションを deliver したり、あるいはサーバーにログインして ``git pull`` すればいいだけのことです。
 しかし現実的に、アプリケーションはデータベースに接続してユーザーデータを永続化しなければなりませんし、マッシュアップアプリケーションなら外部サービスの API をコールしなくてはなりません。
-データベースにユーザーデータを永続化するためにはデータベースに接続するための情報、ホスト名やポート番号、それにデータベース名を、外部サービスの APIをコールするにはその API に接続するためのクレデンシャルを、それぞれアプリケーションが知っている必要があります。
+データベースにユーザーデータを永続化するためにはデータベースに接続するための情報、ホスト名やポート番号、それにデータベース名を、外部サービスの API をコールするにはその API に接続するためのクレデンシャルを、それぞれアプリケーションが知っている必要があります。
 多くの場合これらのパラメーターは YAML や INI 、あるいは JSON など任意の設定ファイルにまとめられ、アプリケーションのエントリーポイントがこれら設定ファイルを読み込んで起動する仕組みになっていることでしょう。
 
 設定ファイルのこれまで
