--- a/content/2015/03/04/110000.rst
+++ b/content/2015/03/04/110000.rst
@@ -56,7 +56,7 @@
 
     <blockquote class="twitter-tweet" lang="en"><p lang="ja" dir="ltr">最近の気付きとして、 24 時間はどう頑張っても 24 時間だし、ぼくは 1 人しかいない</p>&mdash; Kohei YOSHIDA (@yosida95) <a href="https://twitter.com/yosida95/status/571953664664838144">March 1, 2015</a></blockquote>
 
-1 月に続いて 2 月も会社に常勤の正職員が増えて (今年に入って正職員が2.5倍に増えた!) これからもっと楽しくなりそうだなぁというわくわくがあるのだけれど、一方でゲヒルンの職員ではない、ゲヒルンの職員とは結構質の異なる人間の出入りが激しくなって、そういうのが自分にとって結構ストレスになっているなぁということも感じている。
+1 月に続いて 2 月も会社に常勤の正職員が増えて（今年に入って正職員が2.5倍に増えた!）これからもっと楽しくなりそうだなぁというわくわくがあるのだけれど、一方でゲヒルンの職員ではない、ゲヒルンの職員とは結構質の異なる人間の出入りが激しくなって、そういうのが自分にとって結構ストレスになっているなぁということも感じている。
 
 これは恒久的に続くものではないし、自分が適応するしかないと思うのだけれど、ふとしたことが気になって仕方がなくて、とても知的生産ができる状況では無かったので、今月はかなりの時間を在宅勤務に割り振った。
 
