--- a/content/2012/04/28/235534.rst
+++ b/content/2012/04/28/235534.rst
@@ -11,10 +11,10 @@ hinatter が運営していた「\ `見てるなう <http://miteru.gkbr.me>`__\ 
 
 2時間足らずで製作したものですが、従来の見てるなう同様ブックマークレットから簡単に投稿画面を呼べ、必要に応じてコメントを付加して Twitter に投稿することができます。
 
-なお、 Twitter の OAuth Access Token をブックマークレットの中にハードコードして、投稿ページにはGETで渡しています。
+なお、 Twitter の OAuth Access Token をブックマークレットの中にハードコードして、投稿ページには GET で渡しています。
 これもオリジナルと同じ仕様です。
 
 ご承知だとは思いますが、投稿画面 URL 、あるいはブックマークレットを他人に見せてはいけません。
-第3者にあなたのアカウントを使って勝手に見てるなうされます。
+第三者にあなたのアカウントを使って勝手に見てるなうされます。
 
 【見てるなう(仮) http://miteru.yosida95.com\ 】よろしくお願いします。
