--- a/content/2012/09/03/211203.rst
+++ b/content/2012/09/03/211203.rst
@@ -7,9 +7,9 @@
 
 タイトル少し釣りました。
 
-夏季インターン扱いのアルバイトとして学校が夏休みである8月の1ヶ月間、\ `株式会社Decoo <http://www.decoo.co.jp/>`__\ にて働いていました。
+夏季インターン扱いのアルバイトとして学校が夏休みである8月の1ヶ月間、\ `株式会社 Decoo <http://www.decoo.co.jp/>`__\ にて働いていました。
 
-Decoo とは今年の4月1日に\ `このような <http://megalodon.jp/2012-0401-1242-31/af2012.decoo.jp/>`__\ 若い世代に嬉しい採用活動を行い話題になった渋谷のIT企業です。
+Decoo とは今年の4月1日に\ `このような <http://megalodon.jp/2012-0401-1242-31/af2012.decoo.jp/>`__\ 若い世代に嬉しい採用活動を行い話題になった渋谷の IT 企業です。
 
 
 きっかけ
