--- a/content/2015/04/01/173000.rst
+++ b/content/2015/04/01/173000.rst
@@ -39,7 +39,7 @@ Gehirn ID Center
 Gehirn RS2 PLUS
 ---------------
 
-`Gehirn RS2 PLUS <https://www.gehirn.jp/gis/rs2.html>`__ はこれまでの RS2 で問題となっていた暴走プロセスによる他のユーザーへの影響や、Production Ready が宣言される前に採用した ZFS on Linux の問題などを低減するために Linux Containers (LXC) でリソースが分離された新しいコンセプトのレンタルサーバーとして社長の `@isidai <http://twitter.com/isidai>`__ さんが設計と技術検証をはじめました。
+`Gehirn RS2 PLUS <https://www.gehirn.jp/gis/rs2.html>`__ はこれまでの RS2 で問題となっていた暴走プロセスによる他のユーザーへの影響や、 Production Ready が宣言される前に採用した ZFS on Linux の問題などを低減するために Linux Containers (LXC) でリソースが分離された新しいコンセプトのレンタルサーバーとして社長の `@isidai <http://twitter.com/isidai>`__ さんが設計と技術検証をはじめました。
 
 そしてアーキテクチャが固まってきた2014年10月にぼくに引き継がれ、まずはコンテナを作成するところから開発をはじめました。
 コントロールパネルからデーモンプロセスの管理ができるプロセス機能は当初ありませんでしたが、 supervisord を RS2 PLUS の API から操作できるようにしたら最高便利だと思いついてそのまま実装したことから提供が決まりました。
@@ -48,7 +48,7 @@ Gehirn RS2 PLUS
 Gehirn DNS
 ----------
 
-`Gehirn DNS <https://www.gehirn.jp/gis/dns.html>`__ はこれまでの機能を踏襲しつつ、ゾーンのバージョン管理や、バージョンの指定時刻での自動切り替え、それに向けた TTL の自動調整 (つまり、多くの人が「浸透」などの言葉に煙にまかれているレコードキャッシュ問題をエンジニアリングで解決する) などの新機能を盛り込んだサービスです。
+`Gehirn DNS <https://www.gehirn.jp/gis/dns.html>`__ はこれまでの機能を踏襲しつつ、ゾーンのバージョン管理や、バージョンの指定時刻での自動切り替え、それに向けた TTL の自動調整（つまり、多くの人が「浸透」などの言葉に煙にまかれているレコードキャッシュ問題をエンジニアリングで解決する）などの新機能を盛り込んだサービスです。
 
 なお、新しい Gehirn DNS をリリースして初めてのマイグレーションは、本日 0:30 の `www.gehirn.jp <https://www.gehirn.jp/>`__ でした。
 
@@ -87,7 +87,7 @@ Gehirn EDJ
 「 yosida95 の 2014 年まとめ」について
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-    # ぼくがゲヒルンに入社して以来戦い続けてきたプロジェクトは (twitter や facebook で何度か愚痴ったり皮肉ったりしたように) 紆余曲折がありましたが、経営陣に呼ばれて実施された個人面談で思っていることをはっきり言わせてもらったことや、それによってチームの編成が変わっりしたことも追い風となってようやく勝つことができそうです。
+    # ぼくがゲヒルンに入社して以来戦い続けてきたプロジェクトは（ Twitter や facebook で何度か愚痴ったり皮肉ったりしたように）紆余曲折がありましたが、経営陣に呼ばれて実施された個人面談で思っていることをはっきり言わせてもらったことや、それによってチームの編成が変わっりしたことも追い風となってようやく勝つことができそうです。
     # ぼくの一連の投稿を受けてかなり本気の心配を頂いたり、強い共感をを頂いたりしていたので、状況が好転したことをひとまずここでご報告させていただきます。
     -- `yosida95 の 2014 年まとめ </2014/12/29/130000.html#anchor>`__
 
