--- a/content/2011/09/18/030254.rst
+++ b/content/2011/09/18/030254.rst
@@ -68,17 +68,18 @@ VPN まじおいしいです><
 僕はと言うと、以下のような感じ。
 
 #pyhack 開始前にできていたこと
-    MySQL テーブルの定義 ( SQLAlchemy )
-    年・月・日によるアーカイブページ
-    年・月・日によるアーカイブページのタグによる絞り込み
-    タグによるアーカイブページ
-    記事の表示
-    記事の予約公開
+   - MySQL テーブルの定義 ( SQLAlchemy )
+   - 年・月・日によるアーカイブページ
+   - 年・月・日によるアーカイブページのタグによる絞り込み
+   - タグによるアーカイブページ
+   - 記事の表示
+   - 記事の予約公開
+
 #pyhack で実装したもの
-    コメントの表示
-    フォームオブジェクト・バリデータの定義( WTForms )
-    コメントの投稿
-    記事の投稿
+   - コメントの表示
+   - フォームオブジェクト・バリデータの定義( WTForms )
+   - コメントの投稿
+   - 記事の投稿
 
 成果発表
 --------
