--- a/content/2014/07/01/021829.rst
+++ b/content/2014/07/01/021829.rst
@@ -74,11 +74,9 @@ CloudFront に独自 SSL 証明書を適用する
 
 証明書のアップロードが完了したら、最後に CloudFront にアップロードした証明書を適用します。
 
-#. Amazon Web Service の Web
-   コントロールパネルを開きます
+#. Amazon Web Service の Web コントロールパネルを開きます
 #. CloudFront のコントロールパネルに移動します
-#. Distributions の中から Failover 先の Distribution を選択し、
-   Distribution Settings に移動します
+#. Distributions の中から Failover 先の Distribution を選択し、 Distribution Settings に移動します
 #. General タブの Edit ボタンを押します
 #. 以下のスクリーンキャプチャを参考に設定します |CloudFront 設定画面|
 
